[package]
name = "pg_crdt"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg14"]
pg14 = ["pgx/pg14", "pgx-tests/pg14" ]
pg_test = []

[dependencies]
pgx = "0.4.4"
serde = "1.0"
itertools = "0.10.3"
yrs = "0.9.3"
lib0 = { version = "0.9.2", features=["serde", "serde_json"] }

[dev-dependencies]
pgx-tests = "0.4.2"

[profile.dev]
panic = "unwind"
lto = "thin"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
