[package]
name = "pg_crdt"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg14"]
pg14 = ["pgx/pg14", "pgx-tests/pg14" ]
pg15 = ["pgx/pg15", "pgx-tests/pg15" ]
pg_test = ["pgx-tests", "postgres", "lib0", "bytes"]

[dependencies]
pgx = "0.6.0"
serde = "1.0"
itertools = "0.10.3"
yrs = "0.13.0"
uuid = "1.2.2"
base64 = "0.13.1"
anyhow = "1.0.66"
pgx-tests = { version = "0.6.0-alpha.2", optional = true }
postgres = { version = "0.19.4", optional = true }
lib0 = { version = "0.13.0", optional = true }
bytes = { version = "1.3.0", optional = true }
automerge = "0.1.0"

[dev-dependencies]
pgx-tests = "0.6.0"

[profile.dev]
panic = "unwind"
lto = "thin"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
